--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- © 2025 Adrián Sabino Pérez. Todos los derechos reservados. Prohibida la reproducción total o parcial del código sin autorización. -->
 <!DOCTYPE html>
 <html lang="es">
 
@@ -29,7 +30,7 @@
         <meta name="twitter:image" content="resources/CV/FotoCV.jpg">
 
         <!-- Favicon -->
-        <link rel="icon" href="resources/Software_Icons/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="resources/Favicon.webp" type="image/x-icon">
 
         <!-- CSS y JS -->
         <link rel="stylesheet" href="css/style.css">
@@ -322,7 +323,7 @@
             <div class="container">
                 <h2 class="skills-title">Hardware Skills</h2>
                 <p class="skills-description">
-                    Además de mi experiencia en desarrollo de software y ciberseguridad, cuento con conocimientos en hardware, montaje de equipos, diagnóstico de fallos y dispositivos embebidos como Raspberry Pi y Arduino.
+                    Además de mi experiencia en desarrollo de software y ciberseguridad, cuento con conocimientos en hardware, montaje de equipos y mucho más.
                 </p>
 
                 <!-- Conocimientos de Hardware -->
@@ -330,8 +331,8 @@
                     <h3>Mantenimiento y Diagnóstico</h3>
                     <div class="skill-icons">
                         <span>Montaje de PCs</span>
-                        <span>Diagnóstico de Fallos</span>
-                        <span>Optimización de Hardware</span>
+                        <span>Instalación y puesta a punto de diversos SOs</span>
+                        <span>Detección de errores de Hardware</span>
                     </div>
                 </div>
 
@@ -366,7 +367,7 @@
                 <!-- Introducción Personal -->
                 <div class="about-content">
                     <p>
-                        ¡Hola! Soy <strong>Adrián Sabino</strong>, un apasionado <strong>Desarrollador Fullstack & Móvil</strong> con un enfoque en la creación de aplicaciones modernas, escalables y funcionales. Además, me desempeño como <strong>Analista Junior en Ciberseguridad</strong>, donde me especializo en la protección de sistemas y la seguridad de la información.
+                        ¡Hola! Soy <strong>Adrián Sabino</strong>, un apasionado <strong>Desarrollador Fullstack & Móvil</strong> con un enfoque en la creación de aplicaciones modernas, escalables y funcionales. Además, actualmente estoy formandome para desempeñar el cargo de <strong>Analista Junior en Ciberseguridad</strong>.
                     </p>
                     <p>
                         Mi trayectoria combina la creatividad del desarrollo de software con la rigurosidad del análisis de ciberseguridad. Me encanta enfrentar nuevos retos, aprender constantemente y explorar nuevas tecnologías para mejorar mis habilidades.
@@ -375,23 +376,39 @@
 
                 <!-- Ambiciones y Objetivos -->
                 <div class="ambitions">
-                    <h3>🎯 Mis Ambiciones</h3>
+                    <h3>🎯 Mis Ambiciones Vitales</h3>
                     <ul>
-                        <li>Convertirme en un <strong>referente en desarrollo fullstack</strong> y en <strong>ciberseguridad ofensiva</strong>.</li>
-                        <li>Contribuir a proyectos open-source que mejoren la seguridad y accesibilidad digital.</li>
-                        <li>Seguir ampliando mis conocimientos en áreas como <strong>DevSecOps</strong> y <strong>Cloud Security</strong>.</li>
+                        <li>🛡️ Convertirme en un <strong>experto en ciberseguridad</strong>.</li>
+                        <li>🔒 Trabajar en multinacionales referentes en el ámbito de la ciberseguridad (Telefónica, Google, Deloitte, Microsoft, IBM, Cisco, Oracle, etc.)</li>
+                        <li>🖱️ Ampliar al máximo mis conocimientos en Desarrollo de Software Multiplataforma y Fullstack.</li>
+                        <li>🏡 Vivir en paises del norte de Europa (Dinamarca, Noruega, Alemania, Irlanda), en países de América del norte (EEUU o Canadá) o en paises asiáticos como Japón o Corea del Sur</li>
                     </ul>
                 </div>
 
                 <!-- Aficiones e Intereses -->
                 <div class="hobbies">
                     <h3>🎨 Más Allá del Código</h3>
-                    <p>Cuando no estoy programando o explorando vulnerabilidades, disfruto de:</p>
+                    <p>Cuando no estoy programando, formandome sobre ciberseguridad o aprendiendo sobre nuevas tecnologías, disfruto de:</p>
                     <ul>
-                        <li>🔍 Resolver retos de <strong>CTF (Capture The Flag)</strong> en ciberseguridad.</li>
-                        <li>📚 Aprender sobre tecnologías emergentes y desarrollo seguro.</li>
-                        <li>🎮 Jugar videojuegos estratégicos y de simulación.</li>
-                        <li>🚴‍♂️ Practicar deporte al aire libre para despejar la mente.</li>
+                        <li>🎮 Jugar videojuegos (Mis generos de videojuegos favoritos son: Estrategia, Shooters, Terror, Survival, Históricos y Souls)</li>
+                        <li>♟️ Jugar juegos de mesa (Sobre todo los que tengan un alto contenido de estrategia como el Ajedrez, el Risk, Seven Wonders Duels o Carcassonne)</li>
+                        <li>📖 Aprender sobre historia del mundo (me gusta mucho la historia, sobre todo la de España), así como aprender y analizar las situaciones geopolíticas mundiales</li>
+                        <li>📺 Ver Películas, Series y Anime </li>
+                        <li>🎵 Escuchar música (Mis grupos/cantantes favoritos son Estopa, Fito y Fitipaldis, Mägo de Oz, El canto del loco, Dani Martín y Melendi) </li>
+                    </ul>
+                </div>
+
+                <!-- Curiosidades Sobre Mí -->
+                <div class="curiosities">
+                    <h3>🤔 Curiosidades Sobre Mí</h3>
+                    <ul>
+                        <li>👨‍💻 Escribí mi primer programa en Python cuando tenía 16 años</li>
+                        <li>🏅 He ganado varios premios y medallas en torneos comarcales de ajedrez (En el Campo de Gibraltar) </li>
+                        <li>🌐 Me apasiona la historia y la geopolítica, así como su influencia en la tecnología global.</li>
+                        <li>🧠 Me encanta todo lo que tenga que ver con la estrategia, es una gran forma de desarrollar el cerebro</li>
+                        <li>🥊 Me interesan los deportes de contacto (Boxeo, Kickboxing, Jiu-Jitsu), pero nunca he podido practicarlos</li>
+                        <li>⚽ Me encanta prácticar diversos deportes de equipo e individuales (Fútbol, Tenis, Padel, etc.)</li>
+                        <li>🎶 Me gusta cantar y me gustaría formar una pequeña banda de música en el futuro</li>
                     </ul>
                 </div>
 
@@ -399,13 +416,34 @@
                 <div class="faq">
                     <h3>❔ Preguntas Frecuentes</h3>
                     <details>
-                        <summary><strong>¿Qué tecnologías dominas actualmente?</strong></summary>
-                        <p>HTML5, CSS3, JavaScript, PHP, Kotlin, Dart, Python, Java, C#, MongoDB, Firebase, MySQL, Docker, Git, Flutter y más.</p>
+                        <summary><strong>¿Cuál es tu lenguaje de programación preferido?</strong></summary>
+                        <p>
+                            Actualmente, me está gustando mucho usar Dart con 
+                            el Framework Flutter para crear aplicaciones 
+                            multiplataforma.
+                        </p>
                     </details>
 
                     <details>
-                        <summary><strong>¿Cuál es tu filosofía de trabajo?</strong></summary>
-                        <p>Mi enfoque es simple: escribir código limpio, seguro y eficiente. Busco siempre soluciones escalables y me aseguro de priorizar la experiencia del usuario y la seguridad de la información.</p>
+                        <summary><strong>¿En cual red social estás más activo?</strong></summary>
+                        <p>
+                            Suelo usar muchas redes sociales en mi día a día, pero sobre todo estoy muy activo en Instagram
+                        </p>
+                    </details>
+
+                    <details>
+                        <summary><strong>¿Tienes algún permiso de conducir?</strong></summary>
+                        <p>
+                            Si, tengo el permiso o carnét B de conducir (Curiosidad: En el examen teórico lo aprobé a la primera 
+                            y tuve 0 fallos, en el examen práctico tambien lo aprobé a la primera y tuve 1 fallo leve).
+                        </p>
+                    </details>
+
+                    <details>
+                        <summary><strong>¿Que nivel de inglés tienes?</strong></summary>
+                        <p>
+                            Considero que tengo un nivel intermédio de inglés (B1), pero no poseo una certificación oficial
+                        </p>
                     </details>
 
                     <details>
@@ -433,7 +471,11 @@
             <div class="container">
                 <h2 class="skills-title">Soft Skills</h2>
                 <p class="skills-description">
-                    A lo largo de mi experiencia, he desarrollado diversas habilidades interpersonales, metódicas e intrapersonales que complementan mis conocimientos técnicos. Estas competencias me permiten abordar problemas con eficacia, colaborar en equipo y gestionar proyectos con organización y proactividad.
+                    A lo largo de mi experiencia, he desarrollado diversas habilidades 
+                    interpersonales, metódicas e intrapersonales que complementan mis 
+                    conocimientos técnicos. Estas competencias me permiten abordar problemas 
+                    con eficacia, colaborar en equipo y gestionar proyectos con organización 
+                    y proactividad.
                 </p>
 
                 <!-- Habilidades Interpersonales -->
@@ -495,34 +537,46 @@
                     <!-- Bachillerato en Ciencias de la Salud -->
                     <div class="education-item">
                         <h4>Bachillerato en Ciencias de la Salud</h4>
-                        <p class="issuer"><b>Centro:</b> IES El Getares</p>
-                        <p class="date"><b>Fecha:</b> Septiembre 2018 - Junio 2020</p>
+                        <p class="issuer"><b>Centro:</b> IES El Getares (Algeciras)</p>
+                        <p class="date"><b>Fecha:</b> Septiembre 2020 - Junio 2022</p>
                         <p class="description">
-                            <b>Descripción</b> En esta etapa adquirí una sólida formación en ciencias básicas como biología, química y matemáticas. Además, desarrollé habilidades analíticas y una gran capacidad de resolución de problemas.
+                            <b>Descripción</b> En esta etapa adquirí una sólida formación 
+                            en ciencias básicas como biología, química y matemáticas. También, 
+                            desarrollé habilidades analíticas y una gran capacidad de resolución 
+                            de problemas. Y por último, durante mi formación en esta étapa, conocí 
+                            el mundo del desarrollo y la programación, lo que me animó a escoger
+                            este campo a nivel profesional. 
                         </p>
                         <div class="skills-icons">
-                            <p><b>Conocimientos Adquiridos: </b></p>
-                            <span>Biología</span>
-                            <span>Química</span>
-                            <span>Matemáticas</span>
+                            <p><b>Habilidades Adquiridas:</b></p>
+                            <span>Adaptabilidad</span>
+                            <span>Resolución de problemas</span>
+                            <span>Inglés (B1)</span>
+                            <span>Francés (A2)</span>
+                            <img src="resources/Software_Icons/Python.png" alt="Python" title="Python">
                         </div>
                     </div>
 
                     <!-- FP Superior en Desarrollo de Aplicaciones Multiplataforma (DAM) -->
                     <div class="education-item">
                         <h4>FPGS en Desarrollo de Aplicaciones Multiplataforma (DAM)</h4>
-                        <p class="issuer"><b>Centro:</b> Centro de Formación Tecnológica ABC</p>
-                        <p class="date"><b>Fecha:</b> Septiembre 2021 - Junio 2023</p>
+                        <p class="issuer"><b>Centro:</b> IES Rafael Alberti (Cádiz)</p>
+                        <p class="date"><b>Fecha:</b> Septiembre 2022 - Junio 2024</p>
                         <p class="description">
-                            <b>Descripción</b> Formación enfocada en el diseño, desarrollo y mantenimiento de aplicaciones multiplataforma. Aprendí a programar en diversos lenguajes y frameworks, destacando en el desarrollo móvil con Kotlin y Flutter.
+                            <b>Descripción</b> Formación enfocada en el diseño, desarrollo y mantenimiento de 
+                            aplicaciones multiplataforma. Aprendí a programar en diversos lenguajes y frameworks, 
+                            destacando en el desarrollo móvil con Kotlin y Flutter.
                         </p>
                         <div class="skills-icons">
-                            <p><b>Conocimientos Adquiridos: </b></p>
+                            <p><b>Habilidades Adquiridas:</b></p>
                             <img src="resources/Software_Icons/Kotlin.png" alt="Kotlin" title="Kotlin">
-                            <img src="resources/Software_Icons/Python.png" alt="Python" title="Python">
-                            <img src="resources/Software_Icons/CShard.png" alt="C#" title="C#">
+                            <img src="resources/Software_Icons/JetpackCompose.png" alt="JetpackCompose" title="JetpackCompose">
+                            <img src="resources/Software_Icons/Dart.png" alt="Dart" title="Dart">
                             <img src="resources/Software_Icons/Flutter.png" alt="Flutter" title="Flutter">
+                            <img src="resources/Software_Icons/CShard.png" alt="C#" title="C#">
                             <img src="resources/Software_Icons/MySQL.png" alt="MySQL" title="MySQL">
+                            <img src="resources/Software_Icons/MongoDB.png" alt="MongoDB" title="MongoDB">
+                            <img src="resources/Software_Icons/Firebase.png" alt="Firebase" title="Firebase">
                         </div>
                     </div>
                 </div>
@@ -535,13 +589,15 @@
                     <div class="education-item">
                         <h4>Introduction to Cybersecurity</h4>
                         <p class="issuer"><b>Centro:</b> Cisco Networking Academy</p>
-                        <p class="date"><b>Fecha:</b> Mayo 2023</p>
+                        <p class="date"><b>Fecha:</b> Enero 2025</p>
                         <p class="description">
-                            <b>Descripción</b> Certificación en fundamentos de ciberseguridad, explorando las amenazas más comunes, cómo proteger sistemas y comprender la importancia de la seguridad en la infraestructura digital.
+                            <b>Descripción:</b> Certificación en fundamentos de ciberseguridad, explorando 
+                            las amenazas más comunes, cómo proteger sistemas y comprender la importancia de 
+                            la seguridad en la infraestructura digital.
                         </p>
                         <div class="skills-icons">
-                            <img src="resources/Software_Icons/Cybersecurity.png" alt="Cybersecurity" title="Cybersecurity">
-                            <img src="resources/Software_Icons/Networking.png" alt="Networking" title="Networking">
+                            <p><b>Habilidades Adquiridas:</b></p>
+                            <span>Thread Detection</span>
                         </div>
                     </div>
                 </div>
@@ -567,3 +623,4 @@
         </section>
     </body>
 </html>
+<!-- © 2025 Adrián Sabino Pérez. Todos los derechos reservados. Prohibida la reproducción total o parcial del código sin autorización. -->
