--- a/index.html
+++ b/index.html
@@ -447,6 +447,32 @@
                     </details>
 
                     <details>
+                        <summary><strong>¿Android o IOs?</strong></summary>
+                        <p>
+                            Siempre he tenido Android y lo considero superior a IOs por la libertad que te ofrece, y 
+                            como desarrollador, noto mucho más esa libertad a la hora de programar aplicaciones para 
+                            Android. También pienso que Apple se excede en muchos casos con sus dispositivos IOs, 
+                            llegando en ciertas ocasiones a abusar del consumidor, lo que lo considero injusto. Sin embargo,
+                            esta opinión no influye en absoluto a la hora de programar aplicaciones móviles, yo programo tanto para
+                            Android como para IOs por igual.
+                        </p>
+                    </details>
+
+                    <details>
+                        <summary><strong>¿Windows, MAC o alguna distribución Linux?</strong></summary>
+                        <p>
+                            Desde pequeño he estado acostumbrado a la comodidad de Windows y actualmente no lo cambiaría por nada de 
+                            mundo. Si que es verdad que, como informático, he estado aprendiendo muchísimo sobre Linux, 
+                            incluso llegué a tenerlo como SO principal en mi PC durante una temporada, pero no llegué a 
+                            acostumbrarme del todo y volví a Windows. Actualmente uso Windows y lo considero el mejor SO
+                            para mi, y ocasionalmente puedo llegar a usar alguna distro de Linux o Debian para propósitos profesionales, 
+                            como Kali Linux para mi formación en ciberseguridad. Y en cuanto a MAC, como he dicho en la anterior respuesta, 
+                            no soy afín al entorno Apple,por lo que actualmente no me planteo usar MAC para ningún propósito.
+                        </p>
+                    </details>
+
+
+                    <details>
                         <summary><strong>¿Cómo puedo contactarte?</strong></summary>
                         <p>Puedes contactarme a través de mis redes sociales o enviarme un correo. ¡Siempre estoy abierto a nuevas oportunidades y colaboraciones!</p>
                     </details>
