--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- © 2025 Adrián Sabino Pérez. Todos los derechos reservados. Prohibida la reproducción total o parcial del código sin autorización. -->
+<!-- © 2025 Adrián Sabino Pérez. Todos los derechos reservados. Prohibida la reproducción o imitación total o parcial del código sin autorización. -->
 <!DOCTYPE html>
 <html lang="es">
 
@@ -299,6 +299,9 @@
 
 
 
+
+
+
         <!-- Sección de Experiencia Laboral -->
         <section class="experience">
             <div class="container">
@@ -308,6 +311,9 @@
                 </p>
             </div>
         </section>
+
+
+
 
 
 
@@ -330,9 +336,41 @@
                 <div class="skill-category">
                     <h3>Mantenimiento y Diagnóstico</h3>
                     <div class="skill-icons">
-                        <span>Montaje de PCs</span>
+                        <span>Montaje de PCs de sobremesa</span>
                         <span>Instalación y puesta a punto de diversos SOs</span>
                         <span>Detección de errores de Hardware</span>
+                    </div>
+                </div>
+
+                <!-- Mantenimiento de Equipos Portátiles -->
+                <div class="skill-category">
+                    <h3>Reparación de hardware</h3>
+                    <div class="skill-icons">
+                        <span>Reparación de nivel básico de Portátiles (Entorno Windows o Linux)</span>
+                        <span>Reparación de nivel básico de móviles o celulares (Android)</span>
+                        <span>Reparación de nivel básico de tablets</span>
+                        <span>Reparación de nivel intermedio de ordenadores de sobremesa</span>
+                        <span>Optimización básica del Rendimiento del equipo</span>
+                    </div>
+                </div>
+
+                <!-- Mantenimiento de Equipos Portátiles -->
+                <div class="skill-category">
+                    <h3>Instalación y gestión de entornos virtuales en dispositivos físicos</h3>
+                    <div class="skill-icons">
+                        <span>Instalación de entornos virtuales (VMware y VirtualBox)</span>
+                        <span>Creación y administración de máquinas virtuales (VMs)</span>
+                        <span>Configuración de hardware virtual (CPU, RAM, almacenamiento)</span>
+                    </div>
+                </div>
+
+                <!-- Mantenimiento de Equipos Portátiles -->
+                <div class="skill-category">
+                    <h3>Mantenimiento y Diagnóstico de servidores</h3>
+                    <div class="skill-icons">
+                        <span>Instalación de SOs para servidores (Windows Server, Ubuntu Server, etc.)</span>
+                        <span>Montaje e instalación básica de servidores físicos</span>
+                        <span>Optimización básica de hardware en servidores</span>
                     </div>
                 </div>
 
@@ -347,6 +385,7 @@
                 </div>
             </div>
         </section>
+
 
 
 
@@ -449,7 +488,7 @@
                     <details>
                         <summary><strong>¿Android o IOs?</strong></summary>
                         <p>
-                            Siempre he tenido Android y lo considero superior a IOs por la libertad que te ofrece, y 
+                            Siempre he tenido Android y lo considero superior a IOs por la libertad que ofrece al usuario, y 
                             como desarrollador, noto mucho más esa libertad a la hora de programar aplicaciones para 
                             Android. También pienso que Apple se excede en muchos casos con sus dispositivos IOs, 
                             llegando en ciertas ocasiones a abusar del consumidor, lo que lo considero injusto. Sin embargo,
@@ -459,7 +498,7 @@
                     </details>
 
                     <details>
-                        <summary><strong>¿Windows, MAC o alguna distribución Linux?</strong></summary>
+                        <summary><strong>¿Windows, MAC o alguna distribución Linux o Debian?</strong></summary>
                         <p>
                             Desde pequeño he estado acostumbrado a la comodidad de Windows y actualmente no lo cambiaría por nada de 
                             mundo. Si que es verdad que, como informático, he estado aprendiendo muchísimo sobre Linux, 
@@ -649,4 +688,4 @@
         </section>
     </body>
 </html>
-<!-- © 2025 Adrián Sabino Pérez. Todos los derechos reservados. Prohibida la reproducción total o parcial del código sin autorización. -->
+<!-- © 2025 Adrián Sabino Pérez. Todos los derechos reservados. Prohibida la reproducción o imitación total o parcial del código sin autorización. -->
