--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!-- SEO: Título y Descripción -->
         <title>Adrián Sabino - Desarrollador Fullstack | Portafolio Profesional</title>
         <meta name="description" content="Adrián Sabino es un desarrollador Fullstack especializado en crear soluciones modernas, escalables y funcionales. Descubre sus proyectos y habilidades.">
-        <meta name="keywords" content="Adrián Sabino, Desarrollador Fullstack, Programador, Portafolio, Kotlin, Dart, HTML, CSS, JavaScript, Git, Flutter, Docker">
+        <meta name="keywords" content="Adrián Sabino, Desarrollador Fullstack, Programador, Portafolio, Kotlin, Dart, HTML, CSS, JavaScript, Git, Flutter">
         <meta name="author" content="Adrián Sabino">
 
         <!-- SEO: Indexación y Rastreabilidad -->
@@ -18,9 +18,9 @@
 
         <!-- Open Graph (Optimización para redes sociales) -->
         <meta property="og:title" content="Adrián Sabino - Desarrollador Fullstack | Portafolio">
-        <meta property="og:description" content="Explora el portafolio de Adrián Sabino, un desarrollador Fullstack con experiencia en tecnologías modernas como Flutter, Docker y más.">
+        <meta property="og:description" content="Explora el portafolio de Adrián Sabino, un desarrollador Fullstack con experiencia en tecnologías modernas como Flutter, Kotlin y más.">
         <meta property="og:image" content="resources/CV/FotoCV.jpg">
-        <meta property="og:url" content="https://tudominio.com">
+        <meta property="og:url" content="https://adrisp16.github.io/portfolio">
         <meta property="og:type" content="website">
 
         <!-- Twitter Card (Optimización para Twitter) -->
@@ -42,7 +42,7 @@
         <!-- Encabezado -->
         <nav class="navbar">
             <div class="container">
-                <h1>AdrisabDev</h1>
+                <h1>AdriDevSP</h1>
             </div>
         </nav>
 
