--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <!-- NOT IMPLEMENTED YET <option value="da">Danish</option> -->
                 <!-- NOT IMPLEMENTED YET <option value="sk">Slovak</option> -->
                     <option value="es">Spanish</option>
-                 <!-- NOT IMPLEMENTED YET <option value="eu">Basque</option> -->
+                <!-- NOT IMPLEMENTED YET <option value="eu">Basque</option> -->
                     <option value="fr">French</option>
                 <!-- NOT IMPLEMENTED YET <option value="el">Greek</option> -->
                 <!-- NOT IMPLEMENTED YET <option value="he">Hebrew</option> -->
@@ -64,13 +64,13 @@
                 <!-- NOT IMPLEMENTED YET <option value="ja">Japanese</option> -->
                 <!-- NOT IMPLEMENTED YET <option value="ko">Korean</option> -->
                 <!-- NOT IMPLEMENTED YET <option value="pl">Polish</option> -->
-                    <option value="pt">Portuguese</option> 
+                <!-- NOT IMPLEMENTED YET <option value="pt">Portuguese</option> -->
                 <!-- NOT IMPLEMENTED YET <option value="ru">Russian</option> -->
                 <!-- NOT IMPLEMENTED YET <option value="sr">Serbian</option> -->
                 <!-- NOT IMPLEMENTED YET <option value="sv">Swedish</option> -->
                 <!-- NOT IMPLEMENTED YET <option value="th">Thai</option> -->
                 <!-- NOT IMPLEMENTED YET <option value="tr">Turkish</option> -->
-                    <option value="de">German</option>
+                <!-- NOT IMPLEMENTED YET <option value="de">German</option> -->
                 <!-- NOT IMPLEMENTED YET <option value="no">Norwegian</option> -->
                 </select>
             </div>
