--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
 
                 <!-- 🔥 Switch de Tema (a la izquierda) -->
                 <div class="theme-toggle">
+                    <span id="theme-label">🌞</span>
                     <label class="switch">
                         <input type="checkbox" id="theme-switch">
                         <span class="slider"></span>
                     </label>
-                    <span id="theme-label">🌞 Claro</span>
+                    <span id="theme-label">🌙</span>
                 </div>
 
                 <!-- 🌟 Título principal (Centrado) -->
